# QP-Frame-STM32

./: .gitignore  README.md  agents.md
.codex/skills/freertos-task-design/: SKILL.md
.codex/skills/stm32h7-driver-dev/: SKILL.md
.kiro/hooks/: chinese-commit-message.kiro.hook
.kiro/specs/portable-architecture/: design.md  requirements.md  tasks.md
.kiro/steering/: code-style.md  kiro-rules.md
mcu/stm32h750vbt6/: CMakeLists.txt
mcu/stm32h750vbt6/CMSIS/Device/ST/STM32H7xx/Source/Templates/gcc/linker/: stm32h750xx_flash.ld
mcu/stm32h750xx/: CMakeLists.txt
mcu/stm32h750xx/CMSIS/Device/ST/STM32H7xx/Source/Templates/gcc/linker/: stm32h750xx_flash.ld
mcu/stm32h750xx/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_conf.h
project/ide/eide/.eide/: eide.yml
project/ide/gcc/scripts/cmake/: armgcc_cm7.cmake
project/ide/gcc/scripts/cmake/internal/: armgcc.cmake
project/ide/keil/: Template.uvprojx  stm32h750_custom.sct
project/stm32h750vbt6/ide/eide/.eide/: eide.yml
project/stm32h750vbt6/ide/gcc/scripts/cmake/: armgcc_cm3.cmake
project/stm32h750vbt6/ide/gcc/scripts/cmake/internal/: armgcc.cmake
project/stm32h750vbt6/ide/keil/: Template.uvprojx
project/stm32h750vbt6/usr/: CMakeLists.txt  main.c
project/stm32h750vbt6/usr/.cache/clangd/index/: bsp.c.08DB968F0FEBF4D1.idx  bsp.c.9880ADC32C4E2BC6.idx  bsp.h.44E004BEF6ACCD78.idx  bsp.h.8F3033410867C6EC.idx  debug_uart.c.3023C3EBFD95E134.idx  debug_uart.h.59E566622FC45227.idx  main.c.450CEBF3346B3A08.idx  main.c.631DEE832EF0C41B.idx  stm32h7xx_hal_msp.c.2D5D3FDEDF4CDEFC.idx  stm32h7xx_hal_msp.c.8CF0F8309291BCDA.idx  stm32h7xx_it.c.7AF1C6B9E5EE639E.idx  stm32h7xx_it.c.AFC46B1E16A871A8.idx  stm32h7xx_it.h.8708EF772BB25233.idx  stm32h7xx_it.h.F561A6F7F7EDD4DF.idx  syscalls.c.37B5E9E8414F511A.idx  syscalls.c.8069100099F23DCB.idx
project/stm32h750vbt6/usr/bsp/: adc.c  adc.h  bsp.c  bsp.h  bsp_adc.c  bsp_adc.h  bsp_adcfilter.c  bsp_adcfilter.h  bsp_gpio.c  bsp_gpio.h  bsp_uart.c  bsp_uart.h  debug_uart.c  debug_uart.h
project/stm32h750vbt6/usr/core/: stm32h7xx_hal_msp.c  stm32h7xx_it.c  stm32h7xx_it.h
project/stm32h750vbt6/usr/inc/: FreeRTOSConfig.h  RTE_Components.h
project/usr/: CMakeLists.txt
project/usr/app/: main.c
project/usr/bsp/: bsp.c  bsp.h  bsp_adc.c  bsp_adc.h  bsp_config.h  bsp_gpio.c  bsp_gpio.h  bsp_uart.c  bsp_uart.h
project/usr/common/filter/: filter.c  filter.h
project/usr/common/ringbuffer/: ringbuffer.c  ringbuffer.h
project/usr/core/: stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
project/usr/core/stm32h750vbt6/: stm32h7xx_it.c
project/usr/device/: led.h  modbus.c  modbus.h  relay.h
project/usr/drivers/: board.h  drv_adc.h  drv_gpio.h  drv_system.h  drv_uart.h
project/usr/drivers/stm32h7/: drv_adc_impl.c  drv_gpio_impl.c  drv_system_impl.c  drv_uart_impl.c  platform_config.h
project/usr/drivers/stm32h750vbt6/: board.c  drv_adc.c  drv_adc_desc.h  drv_gpio.c  drv_gpio_desc.h  drv_system.c  drv_uart.c  drv_uart_desc.h
project/usr/inc/stm32h750vbt6/: stm32h7xx_hal_conf.h
